Fix a bug in displaying tooltips, add a missing tooltip and reformat the tooltips

--- a/static/tooltips/tp1.html
+++ b/static/tooltips/tp1.html
@@ -1,11 +1,9 @@
-<ul>
-    <li>Indicates how good is the match to the best-matching locus.</li>
-    <li><strong>Perfect:</strong> The K-locus region in your assembly is in one piece and has 100% coverage plus 100% nucleotide identity to the reference locus. </li>
-    <li><strong>Very high:</strong> The K-locus region in your assembly is in one piece and has ≥99% coverage to the reference locus, with no expected genes missing and no unexpected K-locus genes.</li>
-    <li><strong>High:</strong> The K-locus region in your assembly is in one piece and has ≥95% coverage to the reference locus, with ≤3 expected genes missing and no unexpected K-locus genes. </li>
-    <li><strong>Good:</strong> The K-locus region in your assembly is in one piece <i>OR</i> has ≥95% coverage to the reference locus, with ≤3 expected genes missing and ≤1 unexpected K-locus genes.</li>
-    <li><strong>Low:</strong> The K-locus region in your assembly is in one piece <i>OR</i> has ≥90% coverage to the reference locus, with ≤3 expected genes missing and ≤2 unexpected K-locus genes.</li>
-    <li><strong>None:</strong> The K-locus region of your assembly does not meet the above criteria.</li>
-    <li><strong>Expected gene</strong> = a gene in the best-match locus</li>
-    <li><strong>Unexpected gene</strong> = a gene from another K-locus</li>
-</ul>
+<div>Indicates how good is the match to the best-matching locus.</div>
+<div><strong>Perfect:</strong> The K-locus region in your assembly is in one piece and has 100% coverage plus 100% nucleotide identity to the reference locus. </div>
+<div><strong>Very high:</strong> The K-locus region in your assembly is in one piece and has ≥99% coverage to the reference locus, with no expected genes missing and no unexpected K-locus genes.</div>
+<div><strong>High:</strong> The K-locus region in your assembly is in one piece and has ≥95% coverage to the reference locus, with ≤3 expected genes missing and no unexpected K-locus genes. </div>
+<div><strong>Good:</strong> The K-locus region in your assembly is in one piece <i>OR</i> has ≥95% coverage to the reference locus, with ≤3 expected genes missing and ≤1 unexpected K-locus genes.</div>
+<div><strong>Low:</strong> The K-locus region in your assembly is in one piece <i>OR</i> has ≥90% coverage to the reference locus, with ≤3 expected genes missing and ≤2 unexpected K-locus genes.</div>
+<div><strong>None:</strong> The K-locus region of your assembly does not meet the above criteria.</div>
+<div><strong>Expected gene</strong> = a gene in the best-match locus</div>
+<div><strong>Unexpected gene</strong> = a gene from another K-locus</div>
