--- a/static/tooltips/tp5.html
+++ b/static/tooltips/tp5.html
@@ -1,4 +1,2 @@
-<ul>
-    <li>tBLASTn matches to genes from other K-locus references that were found within the K-locus region of your assembly.</li>
-    <li>These may indicate that your sample has a novel K-locus.</li>
-</ul>
+<div>tBLASTn matches to genes from other K-locus references that were found within the K-locus region of your assembly.</div>
+<div>These may indicate that your sample has a novel K-locus.</div>
