--- a/static/tooltips/tp7.html
+++ b/static/tooltips/tp7.html
@@ -1,3 +1,1 @@
-<ul>
-    <li><i>Wzc</i> and <i>wzi</i> allelic types as listed in the <i>Klebsiella pneumoniae</i> BIGSdb hosted by the Institut Pasteur.</li>
-</ul>
+<div><i>Wzc</i> and <i>wzi</i> allelic types as listed in the <i>Klebsiella pneumoniae</i> BIGSdb hosted by the Institut Pasteur.</div>
