--- a/static/tooltips/tp9.html
+++ b/static/tooltips/tp9.html
@@ -1,3 +1,1 @@
-<ul>
-    <li>Length of the best-matching reference K-locus in base pairs (bp).</li>
-</ul>
+<div>Length of the best-matching reference K-locus in base pairs (bp).</div>
