--- a/static/tooltips/tp3.html
+++ b/static/tooltips/tp3.html
@@ -1,3 +1,1 @@
-<ul>
-    <li>BLASTn (nucleotide) identity to the best-match reference locus.</li>
-</ul>
+<div>BLASTn (nucleotide) identity to the best-match reference locus.</div>
