--- a/static/tooltips/tp4.html
+++ b/static/tooltips/tp4.html
@@ -1,3 +1,1 @@
-<ul>
-    <li>The image shows which of the best-matching K-locus genes were identified in the K-locus region of your assembly. tBLASTn coverage and identity are indicated for each gene. High coverage and identity matches are shown by darker shading. Low coverage and/or identity matches are shown in lighter shading. Missing genes are shown in grey.</li>
-</ul>
+<div>The image shows which of the best-matching K-locus genes were identified in the K-locus region of your assembly. tBLASTn coverage and identity are indicated for each gene. High coverage and identity matches are shown by darker shading. Low coverage and/or identity matches are shown in lighter shading. Missing genes are shown in grey.</div>
