Replace K-locus with locus in tooltips

--- a/static/tooltips/tp11.html
+++ b/static/tooltips/tp11.html
@@ -1,1 +1,1 @@
-<div>tBLASTn matches to genes from the best-matching reference K-locus that were found outside the K-locus region of your assembly. These indicate either that your assembly is not a good match to the reference K-locus or that the assembly is highly fragmented.</div>
+<div>tBLASTn matches to genes from the best-matching reference locus that were found outside the locus region of your assembly. These indicate either that your assembly is not a good match to the reference locus or that the assembly is highly fragmented.</div>
