--- a/static/tooltips/tp9.html
+++ b/static/tooltips/tp9.html
@@ -1,1 +1,1 @@
-<div>Length of the best-matching reference K-locus in base pairs (bp).</div>
+<div>Length of the best-matching reference locus in base pairs (bp).</div>
