--- a/static/tooltips/tp5.html
+++ b/static/tooltips/tp5.html
@@ -1,2 +1,2 @@
-<div>tBLASTn matches to genes from other K-locus references that were found within the K-locus region of your assembly.</div>
-<div>These may indicate that your sample has a novel K-locus.</div>
+<div>tBLASTn matches to genes from other locus references that were found within the locus region of your assembly.</div>
+<div>These may indicate that your sample has a novel locus.</div>
