Update for Kaptive 3

--- a/static/tooltips/tp1.html
+++ b/static/tooltips/tp1.html
@@ -1,9 +1,5 @@
 <div>Indicates how good is the match to the best-matching locus.</div>
-<div><strong>Perfect:</strong> The locus region in your assembly is in one piece and has 100% coverage plus 100% nucleotide identity to the reference locus. </div>
-<div><strong>Very high:</strong> The locus region in your assembly is in one piece and has ≥99% coverage to the reference locus, with no expected genes missing and no unexpected locus genes.</div>
-<div><strong>High:</strong> The locus region in your assembly is in one piece and has ≥95% coverage to the reference locus, with ≤3 expected genes missing and no unexpected locus genes. </div>
-<div><strong>Good:</strong> The locus region in your assembly is in one piece <i>OR</i> has ≥95% coverage to the reference locus, with ≤3 expected genes missing and ≤1 unexpected locus genes.</div>
-<div><strong>Low:</strong> The locus region in your assembly is in one piece <i>OR</i> has ≥90% coverage to the reference locus, with ≤3 expected genes missing and ≤2 unexpected locus genes.</div>
-<div><strong>None:</strong> The locus region of your assembly does not meet the above criteria.</div>
-<div><strong>Expected gene</strong> = a gene in the best-match locus</div>
-<div><strong>Unexpected gene</strong> = a gene from another locus</div>
+<div>
+    Since Kaptive 3, we have simplified confidence calls to either "<strong>Typeable</strong>" or
+    "<strong>Untypeable</strong>". We generally advise against reporting "<strong>Untypeable</strong>" calls.
+</div>
