--- a/static/tooltips/tp3.html
+++ b/static/tooltips/tp3.html
@@ -1,1 +1,1 @@
-<div>BLASTn (nucleotide) identity to the best-match reference locus.</div>
+<div>Mean amino acid percent identity of the expected genes inside the locus.</div>
