--- a/static/tooltips/tp4.html
+++ b/static/tooltips/tp4.html
@@ -1,1 +1,7 @@
-<div>The image shows which of the best-matching locus genes were identified in the locus region of your assembly. tBLASTn coverage and identity are indicated for each gene. High coverage and identity matches are shown by darker shading. Low coverage and/or identity matches are shown in lighter shading. Missing genes are shown in grey.</div>
+<div>The image shows which of the best-matching locus genes were identified in the locus region of your assembly.
+    Protein coverage and identity are indicated for each gene. High coverage and identity matches are shown by darker
+    shading. Low coverage and/or identity matches are shown in lighter shading. Missing genes are shown in grey.
+    We also indicate whether the genes are <strong>truncated</strong> (short translation), <strong>partial</strong>
+    (gene runs off the contig edge) or <strong>below_threshold</strong> (percent identity was below the
+    database-specific value).
+</div>
