--- a/static/tooltips/tp2.html
+++ b/static/tooltips/tp2.html
@@ -1,1 +1,1 @@
-<div>BLASTn (nucleotide) coverage to the best-match reference locus.</div>
+<div>Percent total nucleotide coverage of the length of the expected genes inside the locus.</div>
