--- a/static/tooltips/tp6.html
+++ b/static/tooltips/tp6.html
@@ -1,2 +1,6 @@
-<div>tBLASTn matches to genes from other locus references that were found outside the locus region of your assembly.</div>
-<div>Several of the locus genes are homologous to genes found in other locations in the genome e.g. the <i>rml</i> or <i>man</i> genes. It is very common for <i>Kaptive</i> to find a small number of ‘other’ locus genes outside the locus region of the assembly. These are not a cause for concern and do not negatively impact the confidence of a locus match. However, if <i>Kaptive</i> finds a large number of genes (more than 5 or 6) the results should be treated cautiously.</div>
+<div>Minimap2 matches to genes from other locus references that were found outside the locus region of your assembly.</div>
+<div>Several of the locus genes are homologous to genes found in other locations in the genome e.g.
+    the <i>rml</i> or <i>man</i> genes. It is very common for <i>Kaptive</i> to find a small number of ‘other’
+    locus genes outside the locus region of the assembly. These are not a cause for concern and do not negatively
+    impact the confidence of a locus match. However, if <i>Kaptive</i> finds a large number of genes (more than 5 or 6)
+    the results should be treated cautiously.</div>
