--- a/static/tooltips/tp8.html
+++ b/static/tooltips/tp8.html
@@ -1,3 +1,7 @@
-<div>Contigs and regions of your assembly that contain the locus.</div>
-<div>A single assembly piece is ideal, as this indicates that the locus is completely assembled. When there is only one assembly piece, <i>Kaptive</i>’s results can be interpreted strictly.</div>
-<div>Short read assemblies may fail to assemble the locus in one piece, particularly if a repetitive element (such as an insertion sequence) is present in the locus. When the locus is spread over multiple contigs, it is much more difficult to confidently classify sequences as included or excluded from the locus. You should interpret <i>Kaptive</i>’s results with more scepticism when there are multiple assembly pieces.</div>
+<div>Contigs and regions (0-based) of your assembly that contain the locus.</div>
+<div>A single assembly piece is ideal, as this indicates that the locus is completely assembled. When there is only one
+    assembly piece, <i>Kaptive</i>’s results can be interpreted strictly.</div>
+<div>Short read assemblies may fail to assemble the locus in one piece, particularly if a repetitive element
+    (such as an insertion sequence) is present in the locus. When the locus is spread over multiple contigs, it is much
+    more difficult to confidently classify sequences as included or excluded from the locus. You should interpret
+    <i>Kaptive</i>’s results with more scepticism when there are multiple assembly pieces.</div>
